v3/README.md
# 快跑者开放接口 v3 版本说明文档

- [前言](#前言)
- [接口简述](#接口简述)
- [基本约定](#基本约定)
- [接口说明](#接口说明)
- [接口使用流程](#接口使用流程)
- [获取合作配送团队成员信息接口](#获取合作配送团队成员信息接口)
- [创建配送订单接口](#创建配送订单接口)
- [撤销配送订单接口](#撤销配送订单接口)
- [获取配送订单信息接口](#获取配送订单信息接口)
- [获取配送订单操作记录接口](#获取配送订单操作记录接口)
- [获取配送员最新坐标接口](#获取配送员最新坐标接口)
- [快捷查看配送订单链接](#快捷查看配送订单链接)
- [订单状态变更后回调](#订单状态变更后回调)
- [附：签名与验签说明](#附签名与验签说明)
    + [请求参数签名](#请求参数签名)
        - [1. 参数筛选](#1-参数筛选)
        - [2. 参数排序](#2-参数排序)
        - [3. 参数拼接](#3-参数拼接)
        - [4. 签名](#4-签名)
    + [返回参数验证签名](#返回参数验证签名)

## 前言

- 快跑者开放接口 [v2] 版本于 2017 年 6 月 8 日正式启用，[v1] 版本的开放接口将于 2017 年 12 月 31 日过期，请使用 [v1] 版本开放接口的第三方系统尽快升级到 [v2] 版本！

- 快跑者开放接口 [v2] 版本相对于 [v1] 版本而言，提供了更丰富的功能接口，接口调用更为安全，文档描述更为准确。

- 快跑者开放接口对接讨论 QQ 群：`438529770`

## 接口简述

简述：本文档系快跑者第三方开放接口说明文档（v3 版），快跑者开放接口是向拥有开发能力的第三方系统开放订单操作能力：第三方系统可通过快跑者开放接口向快跑者系统快捷发送配送订单，并可对订单进行撤销、查看等相关操作。

版本：**v3**

使用时间：`2017-08-08` 起

主要开放能力：

- 获取商户合作的配送团队及成员：`getTeamMembers`

- 创建订单：`createOrder`

- 撤销订单：`cancelOrder`

- 获取订单信息：`getOrderInfo`

- 获取订单进程：`getOrderLog`

- 获取配送员最新坐标：`getCourierTag`

## v3 版本和 v2 版本的差异

- v3版通过开发者秘钥和第三方商户ID验证发单商户， 签名通过开发者秘钥和开发者签名秘钥生成

## 基本约定

在文档描述过程中，为避免因描述模糊而致使开发者理解错误，特对部分关键词做如下约定：

- **第三方系统**：接口的使用方，调用本文档接口的系统或平台（如餐饮外卖平台、物流平台等）

- **快跑者系统**：接口的提供方，向第三方系统开放订单操作能力

- **第三方订单**：第三方系统的订单

- **配送订单**：快跑者系统的订单

注：**第三方订单和配送订单的关系**：开发者在调用创建配送订单接口时，需要传递一些参数，如：订单内容、订单标识、订单备注等，可以将第三方系统订单的对应字段来赋值这些参数。

## 接口说明

快跑者开放接口的返回数据为 **JSON** 格式，由以下三个字段组成：

- **code**：状态码，取值有 200，204；200 表示接口调用成功， 204 表示接口调用失败

- **message**：错误信息，当接口调用失败（状态码为 204）时，返回的错误提示信息

- **data**：返回数据，接口调用成功（状态码为 200）时返回的数据

___

**注：**

+ PHP 开发者可直接获取并使用 [Keloop-PHP-SDK 及 Demo](https://github.com/LingdianIT-Com/keloop/tree/master/v3/Keloop-PHP-SDK) 简化开放流程；

+ 为保证接口调用安全，请求接口需对请求参数进行签名，开发者可参考 [签名与验签说明](#附签名与验签说明) 自由编写签名代码；

+ `merchants_id` 表示 **商户身份标识** ，`api_secret` 表示 **商户身份密钥**

+ 调用创建订单接口成功创建配送订单后，系统会返回配送订单单号：`trade_no`，请开发者保存好，用于后续查询和操作订单；

+ 【**重要**： [v3] 使用新的开发者秘钥和签名秘钥验证身份，如果开发者商户关联的团队只有一个，就不用咋传team_id如果有多个关联团队，下单时发往团队调度就要传team_id

## 接口使用流程

### 先决条件

请开发者先注册快跑者团队端、商户端及配送端账号，并完整体验商户端录单，配送员接单及团队端管理订单的整个流程。

注：快跑者官网：http://www.keloop.cn/

> 快跑者系统主要分为三个终端：团队端、商户端、配送端，各终端的主要职能如下：
    **团队端**：关联和管理合作商户、配送员与配送群，分发订单；
    **商户端**：手动录单，查看订单；
    **配送端**：接单，从配送群中抢单，取单，送单。

### 基本流程

1. 在快跑者 [开发者中心](http://www.keloop.cn/home/open/index) 注册开发者账号，编辑开发者相关信息，并绑定微信（申请通过会通过微信进行通知） 申请**开发密钥**和**签名秘钥**，申请通过后即可进行开发；

2. 根据第三方商户ID和开发密钥调用获取合作配送团队及成员接口，获取身份标识所对应的商户合作的配送团队以及配送团队下的配送员和配送群信息；

3. 根据第三方商户ID和开发密钥调用创建订单接口创建配送订单，以身份标识对应的商户的身份创建配送订单；

4. [可选]可调用获取订单信息接口获取订单的详细信息；

5. [可选]可调用获取订单进程接口获取订单的配送进程；

6. [可选]可调用获取配送员最新坐标接口获取配送员的最新坐标；

7. [可选]可调用撤销订单接口撤销配送订单。

> 快跑者开放接口实际上是以快跑者商户的身份创建、撤销和查看订单

## 获取合作配送团队成员信息接口

**简要描述：** 获取商户身份标识（`merchants_id `,`dev_secret`）对应的快跑者商户所合作的配送团队及团队下的配送群和配送员信息。

**请求 URL：** `http://www.keloop.cn/api/tp3/getTeamMembers`

**请求方式：** GET

**请求参数：**

| 参数名 | 必选 | 类型 | 说明 |
|:----:|:---:|:-----:|:-----:|
| `merchants_id` | **是** | `string` | 第三方商户ID |
| `dev_secret` | 是 | `string` | 开发者中心的开发密钥 |
| `expire_time` | **是** | `int` | 过期时间，时间戳格式（10 位数字），如：1477483702 |
| `sign` | **是** | `string` | 参数签名，生成规则请参考 **签名与验签说明** |

**返回示例**

- 调用成功示例

```
{
    "code": 200,
    "message": "",
    "data": [
        {
            "info": {
                "team_id": 5,
                "team_name": "跑马帮团队"
            },
            "group": [],
            "courier": [
                {
                    "courier_id": 1,
                    "courier_name": "德莱厄斯12"
                },
                {
                    "courier_id": 20,
                    "courier_name": "田丰"
                }
            ]
        },
        {
            "info": {
                "team_id": 3,
                "team_name": "天彻群"
            },
            "group": [
                {
                    "group_id": 4,
                    "group_name": "我我我我我我我我"
                },
                {
                    "group_id": 8,
                    "group_name": "沃文尔"
                }
            ],
            "courier": [
                {
                    "courier_id": 1,
                    "courier_name": "德莱厄斯12"
                },
                {
                    "courier_id": 2,
                    "courier_name": "长得帅2号"
                }
            ]
        },
        {
            "info": {
                "team_id": 4,
                "team_name": "test12"
            },
            "group": [
                {
                    "group_id": 5,
                    "group_name": "测试群"
                }
            ],
            "courier": [
                {
                    "courier_id": 2,
                    "courier_name": "长得帅2号"
                },
                {
                    "courier_id": 20,
                    "courier_name": "田丰"
                }
            ]
        }
    ]
}
```
- 调用失败示例
```
{
    "code": 204,
    "message": "账号认证异常",
    "data": []
}
```

**调用成功返回参数说明：**

| 返回参数名 | 类型 | 说明 |
|:-----:|:-----:|:-----:|
| `info` | `object` | 商户合作的配送团队的信息  |
| `courier` | `array` |  对应配送团队下的配送员的信息  |
| `group` | `array` |  对应配送团队下的配送群的信息  |
| `team_id` | `int` |  商户合作的配送团队 ID  |
| `team_name` | `string` |  商户合作的配送团队名称  |
| `courier_id` | `int` |  配送团队下的配送员 ID |
| `courier_name` | `string` |  配送团队下的配送员名称  |
| `group_id` | `int` |  配送团队下的配送群 ID  |
| `group_name` | `string` |  配送团队下的配送群名称  |

## 创建配送订单接口

**简要描述：** 以商户身份标识（`merchants_id`,`dev_secret`）对应的商户的身份向快跑者系统创建订单。

**请求 URL：** `http://www.keloop.cn/api/tp3/createOrder`

**请求方式：** POST

**请求参数：**

| 参数名 | 必选 | 类型 | 默认值 | 说明 |
|:----:|:---:|:-----:|:-----:|:-----:|
| `merchants_id` | **是** | `string` | 无 | 第三方商户ID |
| `dev_secret` | 是 | `string` | 无 | 开发者中心的开发密钥 |
| `expire_time` | **是** | `int` | 无 | 过期时间，时间戳格式（10 位数字），如：1477483702 |
| `sign` | **是** | `string` | 无 | 参数签名，生成规则请参考 **签名与验签说明** |
| `note` |  否  | `string` | `''` | 自定义参数，快跑者系统调用回调地址时会带上该参数 |
| `order_content` |  否  | `string` | `''` | 订单订单内容，如：`1份烧白开(100x1)` |
| `order_note` |  否  | `string` | `''` |  订单备注，如：麻辣一点  |
| `order_mark` |  否  | `string` | `''` |  订单标识  |
| `order_from` |  否  | `string` | `''` |  订单来源 |
| `order_send` |  否  | `string` | `''` |  订单送达时间，如：`下午六点钟之前送达` |
| `order_no` |  是  | `string` | `''` |  订单单号（必须唯一） |
| `order_time` |  否  | `string` | `''` |  订单下单时间，如：`2016-12-31 23:59:59` |
| `order_photo` |  否  | `string` | `''` |  订单图片路径  |
| `order_price` |  否  | `float` | `0.00` |  订单货物的总价金额，如：`9.99`  |
| `customer_name` |  否  | `string` | `''` |  订单客户（对应配送订单的收单人）名字 |
| `customer_sex` |  否  | `string` | `''` |  订单客户性别，如：`男`，`女`，`保密`  |
| `customer_tel` |  否  | `string` | `''` |  订单客户电话  |
| `customer_address` |  否  | `string` | `''` |  订单客户地址  |
| `customer_tag` |  否  | `string` | `''` |  订单客户坐标，如：`104.012765,30.714386`  |
| `pay_status` |  否  | `int` | `0` |  订单支付方式：0 表示已支付、1 表示货到付款  |
| `pay_type` |  否  | `int` | `3` |  配送订单费用的支付方式，1 表示在线支付，2 表示事后结算，3 表示储备金支付，当团队未设置本商户的储值模式或无法计算配送费时，自动修改为事后结算,当订单发往商户时，同时team_id也为空，自动修改为事后结算 |
| `pay_fee` |  否  | `float` | `0.00` |  配送订单的配送费用  |
| `receipt_type` |  是  | `int` | `1` |  配送订单发放团队或者发往商户，1表示发往商户，2表示发往团队调度  |
| `team_id` |  否  | `int` | `0` |  配送订单指定的配送团队 ID，若为 0 则表示将订单发送到快跑者商户端  |
| `group_id` |  否  | `int` | `0` |  配送订单指定配送团队的配送群ID  |
| `courier_id` |  否  | `int` | `0` |  配送订单指定配送团队的配送员ID  |

**备注：**

- `order_content` 参数如果符合正则规则：`/(.*\([\d\.]+x[\d\.]+\),)+/`，则在订单详情页面会自动以表格的形式展示，如：`五块钱的麻辣烫(5x1),七块钱的麻辣烫(7x1),八块钱的麻辣烫(8x1)`

- `order_no` 参数表示订单单号，该参数在第三方系统中必须唯一，创建配送订单时，快跑者系统会对其进行查重避免重复发单。

- 如果 `receipt_type` 为1 ，则表示将订单发送到快跑者商户端；如果 `receipt_type` 为2，`team_id`不能为空，且 `group_id` 和 `courier_id` 都为 0 ，则表示将订单发往团队端（由团队端分发给配送群或配送员），如果 `group_id` 参数不为 0，则表示将订单发往指定配送团队下的配送群，如果 `courier_id` 参数不为 0，则表示将订单发往指定配送团队下的配送员（如果 `group_id` 和 `courier_id` 都不为 0，则优先发往配送群）。

**v3 版本和 v2 版本的差异：** 

- 添加了receipt_type字段，明确了下单时发往何处，并且在发往商户时，如果没有传`team_id`，自动修改事后结算

**返回示例**

- 调用成功示例
```
{
    "code": 200,
    "message": "",
    "data": {
        "trade_no": "16120709314700002"
    }
}
```
- 调用失败示例
```
{
    "code": 204,
    "message": "该订单已存在，请勿重复提交",
    "data": []
}
```

**调用成功返回参数说明：**

| 返回参数名 | 类型 | 说明 |
|:-----:|:-----:|:-----:|
| `trade_no` | `string` | 配送订单的订单单号，可使用单号查询订单状态及撤销配送订单 |

## 撤销配送订单接口

**简要描述：** 开发者撤销快跑者的配送订单（注：只有处于未发单、未抢单或未接单状态的配送订单才可被撤销）。

**请求 URL：** `http://www.keloop.cn/api/tp3/cancelOrder`

**请求方式：** POST

**请求参数：**

| 参数名 | 必选 | 类型 | 说明 |
|:----:|:---:|:-----:|:-----:|
| `merchants_id` | **是** | `string` | 第三方商户ID |
| `dev_secret` | 是 | `string` | 开发者中心的开发密钥 |
| `expire_time` | **是** | `int` | 过期时间，时间戳格式（10 位数字），如：1477483702 |
| `sign` | **是** | `string` | 参数签名，生成规则请参考 **签名与验签说明** |
| `trade_no` |  **是**  | `string` |  配送订单的订单单号  |

**返回示例**

- 调用成功示例
```
{
    "code": 200,
    "message": "",
    "data": []
}
```
- 调用失败示例
```
{
    "code": 204,
    "message": "只有待发单、待抢单和待接单的订单才可被撤销",
    "data": [ ]
}
```

**返回参数说明：**

略

## 获取配送订单信息接口

**简要描述：** 开发者可根据配送单号获取配送订单的详细信息

**请求 URL：** `http://www.keloop.cn/api/tp3/getOrderInfo`

**请求方式：** GET

**请求参数：**

| 参数名 | 必选 | 类型 | 说明 |
|:----:|:---:|:-----:|:-----:|
| `merchants_id` | **是** | `string` | 第三方商户ID |
| `dev_secret` | 是 | `string` | 开发者中心的开发密钥 |
| `expire_time` | **是** | `int` | 过期时间，时间戳格式（10 位数字），如：1477483702 |
| `sign` | **是** | `string` | 参数签名，生成规则请参考 **签名与验签说明** |
| `trade_no` |  **是**  | `string` |  配送订单的订单单号  |

**返回示例**

- 调用成功示例
```
{
    "code": 200, 
    "message": "", 
    "data": {
        "order_content": "1份烧白开(100x1),1份拉面(18x1)", 
        "order_note": "不要太辣了", 
        "order_mark": "外卖订单", 
        "order_from": "三餐美食 - 兰州拉面", 
        "order_send": "下午六点钟之前送达", 
        "order_time": "2016-12-31 23:59:59", 
        "order_photo": "http://a4.att.hudong.com/38/47/19300001391844134804474917734_950.png", 
        "customer_name": "郝美丽", 
        "customer_sex": "男", 
        "customer_address": "成都市金牛区蓝海天地1栋421", 
        "customer_tag": "104.081909,30.779741", 
        "get_name": "一家商户", 
        "get_sex": "保密", 
        "get_address": "成都理工大学哈哈哈", 
        "get_tel": "18280094727", 
        "get_tag": "104.01233,30.705693", 
        "customer_tel": "18288888888", 
        "order_no": "121531546", 
        "order_price": "99.99", 
        "pay_status": "1", 
        "pay_type": "2", 
        "pay_fee": "6.66", 
        "send_time": "2017-06-06 16:54:52", 
        "update_time": "2017-06-07 11:13:47", 
        "status": "6", 
        "trade_no": "17060616545200001", 
        "courier_name": "徐哈哈1", 
        "courier_tel": "18280094727", 
        "team_name": "本地团队", 
        "team_tel": "18280094727", 
        "group_name": "测试群"
    }
}
```
- 调用失败示例
```
{
    "code": 204,
    "message": "该订单不存在",
    "data": [ ]
}
```

**调用成功返回参数说明：**

| 返回参数名 | 类型 | 说明 |
|:-----:|:-----:|:-----:|
| `order_content` | `string` | 订单内容 | 
| `order_note` | `string` | 订单备注 | 
| `order_mark` | `string` | 订单标识 | 
| `order_from` | `string` | 订单来源 | 
| `order_send` | `string` | 订单送达时间 | 
| `order_time` | `string` | 第三方订单下单时间 | 
| `order_photo` | `string` | 订单图片路径 | 
| `order_no` | `string` | 第三方订单单号 | 
| `pay_status` | `string` | 第三方订单的支付状态，0 表示已经支付，1 表示货到付款 | 
| `order_price` | `string` | 订单价值金额 | 
| `customer_name` | `string` | 订单客户（对应配送订单的收单人）名字 | 
| `customer_sex` | `string` | 订单客户性别 | 
| `customer_address` | `string` | 订单客户地址 | 
| `customer_tag` | `string` | 订单客户坐标 | 
| `customer_tel` | `string` | 订单客户电话 | 
| `get_name` | `string` | 取单名字 | 
| `get_sex` | `string` | 取单性别 | 
| `get_address` | `string` | 取单地址 | 
| `get_tel` | `string` | 取单电话 | 
| `get_tag` | `string` | 取单坐标 | 
| `pay_type` | `string` | 配送费的支付方式，2 表示事后结算，3 表示储备金支付 | 
| `pay_fee` | `string` | 配送费金额 | 
| `send_time` | `string` | 配送订单的发单时间 | 
| `update_time` | `string` | 配送订单的更新时间 | 
| `status` | `string` | 配送订单状态：1：待发单，2：待抢单，3：待接单，4：取单中，5：送单中，6：已送达，7：已撤销 | 
| `trade_no` | `string` | 配送订单单号 | 
| `courier_name` | `string` | 接单配送员的名字 | 
| `courier_tel` | `string` | 接单配送员的电话 | 
| `team_name` | `string` | 配送团队名字 | 
| `team_tel` | `string` | 配送团队电话 | 
| `group_name` | `string` | 所属配送群的名字 |

## 获取配送订单操作记录接口

**简要描述：** 开发者可根据配送单号获取配送订单的操作记录。

**请求 URL：** `http://www.keloop.cn/api/tp3/getOrderLog`

**请求方式：** GET

**请求参数：**

| 参数名 | 必选 | 类型 | 说明 |
|:----:|:---:|:-----:|:-----:|
| `merchants_id` | **是** | `string` | 第三方商户ID |
| `dev_secret` | 是 | `string` | 开发者中心的开发密钥 |
| `sign` | **是** | `string` | 加密密钥，按支付宝密钥排序，可参考**签名与验签说明** |
| `expire_time` | **是** | `int` | 过期时间，时间戳格式，如：1477483702 |
| `trade_no` |  **是**  | `string` |  配送订单的订单单号  |

**返回示例**

- 调用成功示例
```
{
    "code": 200, 
    "message": "", 
    "data": [
        {
            "time": "2017-06-06 16:57:54", 
            "role": 2, 
            "title": "发入抢单群（本地团队-测试群）", 
            "name": "一家商户", 
            "tel": "18280094727"
        }, 
        {
            "time": "2017-06-07 11:13:21", 
            "role": 1, 
            "title": "被抢单（被接单）", 
            "name": "徐哈哈1", 
            "tel": "18280094727"
        }, 
        {
            "time": "2017-06-07 11:16:16", 
            "role": 1, 
            "title": "已取单", 
            "name": "徐哈哈1", 
            "tel": "18280094727"
        }, 
        {
            "time": "2017-06-07 11:16:27", 
            "role": 1, 
            "title": "已送达", 
            "name": "徐哈哈1", 
            "tel": "18280094727"
        }
    ]
}
```
- 调用失败示例
```
{
    "code": 204,
    "message": "您没有操作权限",
    "data": [ ]
}
```

**调用成功返回参数说明：**

| 返回参数名 | 类型 | 说明 |
|:-----:|:-----:|:-----:|
| `time` | `string` | 操作时间 | 
| `role` | `string` | 操作者角色，1：配送员，2：商户，3：团队 | 
| `name` | `string` | 操作者名字 | 
| `tel` | `string` | 操作者的电话号码 | 
| `title` | `string` | 操作描述 | 

## 获取配送员最新坐标接口

**简要描述：** 开发者可根据配送单号获取该订单的配送员的最新坐标

**注意：**

- 快跑者配送员坐标使用的是火星坐标系！
- 只有在订单状态处于取单中和送单中时才可查看配送员的坐标！

**请求 URL：** `http://www.keloop.cn/api/tp3/getCourierTag`

**请求方式：** GET

**请求参数：**

| 参数名 | 必选 | 类型 | 说明 |
|:----:|:---:|:-----:|:-----:|
| `merchants_id` | **是** | `string` | 第三方商户ID |
| `dev_secret` | 是 | `string` | 开发者中心的开发密钥 |
| `sign` | **是** | `string` | 加密密钥，按支付宝密钥排序，可参考**签名与验签说明** |
| `expire_time` | **是** | `int` | 过期时间，时间戳格式，如：1477483702 |
| `trade_no` |  **是**  | `string` |  配送订单的订单单号  |

**返回示例**

- 调用成功示例
```
{
    "code": 200, 
    "message": "获取成功!", 
    "data": {
        "gate_time": "2017-05-25 16:59:21", 
        "latitude": "30.71490499025135", 
        "longitude": "104.01535454330507"
    }
}
```
- 调用失败示例
```
{
    "code": 204,
    "message": "您没有查看权限",
    "data": [ ]
}
```

**调用成功返回参数说明：**

| 返回参数名 | 类型 | 说明 |
|:-----:|:-----:|:-----:|
| `gate_time` | `string` | 配送员在该坐标时的时间 | 
| `longitude` | `string` | 坐标经度 | 
| `latitude` | `string` | 坐标纬度 | 

## 快捷查看配送订单链接

**简要描述：** 开发者可根据配送订单单号拼接一个固定格式的 url 地址来快捷访问配送订单信息及订单状态。

**说明：** 为让快跑者开放接口更为简便易用，第三方系统可使用直接跳转 URL 的方式来展示订单详情及相关信息，开发者调用下单接口后，快跑者会返回订单的单号（如：16122813523200001），使用该单号可拼接一个固定格式的 URL 链接（如：`http://www.keloop.cn/show_order/16122813523200001`），直接访问该链接即可查看该订单的详情和进程。

## 订单状态变更后回调

**简要描述：** 开发者调用创建订单接口后会在快跑者系统中创建一个配送订单，配送单被配送员接单（抢单）、送达或被商户或团队撤销时均会向第三方系统回调通知订单改变状态。

**注意：** 

- 如果开发者未在快跑者开放中心设置回调地址，则不会进行回调
- 第三方系统接收到回调请求，并处理好业务逻辑之后请返回 `success` 字符串，否则快跑者系统将认定本地回调请求失败，于是将向第三方系统进行重复多次回调

**请求 URL：** 本次请求是由快跑者系统向第三方系统发起，请求地址为开发者在快跑者 [开放中心](http://www.keloop.cn/home/open/index) 设置的回调地址（所以，请注意一定要设置回调地址！）。

**请求方式：** POST

**请求参数：**

| 参数名 | 类型 | 说明 |
|:----:|:-----:|:-----:|
| `merchants_id` | `string` | 身份认证标识，第三方系统调用下单接口时使用的身份认证标识 |
| `dev_secret` | 是 | `string` | 开发者中心的开发密钥 |
| `expire_time` | `int` | 请求的过期时间，时间戳格式，如：1477483702 |
| `sign` | `string` | 加密密钥，按支付宝密钥排序，可参考**签名与验签说明**，主要用于验证请求权限 |
| `trade_no` | `string` |  状态发生改变的配送订单的订单单号  |
| `state` | `int` |  配送订单状态码，可选值为 4,5,6,7，具体参考下面的订单状态码说明表  |
| `note` | `string` | 创建订单时传递自定义参数 `note` |
| `courier` | `string` | 配送员的名字 |
| `tel` | `string` |  配送员的电话号码  |
| `update_time` | `string` |  配送订单状态的改变时间，如：`2017-01-01 01:01:01`  |

**参数示例：**
```
{
    "trade_no": "17060711244400001", 
    "merchants_id": "SD7O8ZC46ER_6JZUS58HAZS3O2YZ7JIO", 
    "dev_secret": "D8874856018736F3BC46541CD70B78B1", 
    "state": "6", 
    "tel": "18280094727", 
    "update_time": "2017-06-07 11:36:14", 
    "expire_time": "1496806651", 
    "courier": "徐哈哈1", 
    "note": "", 
    "sign": "8cd619d3271e204d1e2d80babad78fd3"
}
```

**订单状态码说明：**

| 状态码 | 说明 | 说明 |
|:----:|:-----:|:-----:|
| `4` | 取单中（已接单/已抢单） | 发往配送群的订单被配送员抢单，或发往配送员的订单被配送员接单 |
| `5` | 送单中（已取单） | 配送员已从取件处领取货物，准备送往收件人 |
| `6` | （已送达） | 配送员已将货物送达到收件人 |
| `7` | （已撤销） | 商户或团队撤销订单 |



## 附：签名与验签说明

PHP 开发者可直接使用或借鉴快跑者 [Keloop-PHP-SDK](https://github.com/LingdianIT-Com/keloop/tree/master/v3/Keloop-PHP-SDK)，其他语言开发者可根据以下签名规则自己编写签名方法，具体的签名流程如下：

### 请求参数签名

示例：使用以下 `merchants_id` 和 `api_secret` 来签名请求参数：
```
{
    "merchants_id": "K6GQF8N8",
    "api_secret": "Z0AX4ZHH",
}
```

#### 1. 参数筛选

获取所有请求参数（不包括字节类型参数，如文件、字节流），剔除参数名为 `sign`、`sign_type`、`key` 的参数及参数值为 `''` 或 `null` 的参数。

**注意：** 请不要将 `api_secret` 参数直接加入到请求参数中。

假定需要请求的参数如下：

```
{
    "name": "张三", 
    "sex": 1, 
    "nickname": "", 
    "money": null, 
    "sign": "test_sign", 
    "expire_time": 1496884829, 
    "merchants_id": "K6GQF8N8"
}
```

则根据规则经过参数筛选之后的参数为：

```
{
    "name": "张三", 
    "sex": 1, 
    "expire_time": 1496884829, 
    "merchants_id": "K6GQF8N8"
}
```

#### 2. 参数排序

按照参数名第一个字符的键值 ASCII 码递增排序（字母升序排序），如果遇到相同字符则按照第二个字符的键值 ASCII 码递增排序，以此类推。

经过参数排序之后参数为：

```
{
    "merchants_id": "K6GQF8N8", 
    "expire_time": 1496884829, 
    "name": "张三", 
    "sex": 1
}
```

#### 3. 参数拼接

1. 将排序后的参数名与参数值，组合成“参数名=参数值”的格式，并把这些参数用 **&** 字符连接起来，此时生成的字符串为最初的待签名字符串。经过参数拼接之后的最初待签名字符串为：

    ```
    merchants_id=K6GQF8N8&expire_time=1496884829&name=\u5f20\u4e09&sex=1
    ```
    
2. 然后将最初的待签名字符串和 `api_secret` 的值 **直接** 拼接到一起，生成最终的待签名字符串：

    ```
    # 最初的待签名字符串：
    merchants_id=K6GQF8N8&expire_time=1496884829&name=\u5f20\u4e09&sex=1
    # 拼接 api_secret 后的最终的待签名字符串：
    merchants_id=K6GQF8N8&expire_time=1496884829&name=\u5f20\u4e09&sex=1Z0AX4ZHH
    ```

#### 4. 签名

使用 md5(）方法对最终的待签名字符串进行签名：

```
md5('merchants_id=K6GQF8N8&expire_time=1496884829&name=\u5f20\u4e09&sex=1Z0AX4ZHH')
# 结果为：
d5ed9156c4e9a610789ef6547a83fd3c
```

因此，请求参数的签名结果（即 `sign` 参数的值）为：`d5ed9156c4e9a610789ef6547a83fd3c`

### 返回参数验证签名

开发者在快跑者 [开发者中心](http://www.keloop.cn/home/open/index) 可设置一个回调地址（`notify_url`），当快跑者订单的状态发生变化时，会回调该地址，请开发者对快跑者回调传递的参数进行验证签名，以保证接口调用安全。

验证签名，需要将获取到的参数进行签名（参考上面的签名流程），然后再对比 sign 值是否相等，由此进行参数签名验证！
